Bug 1406381 - Extend assert_computed_timing_for_each_phase to accommodate negative playback rates; r=hiro
MozReview-Commit-ID: LpTRS6aMaWw

UltraBlame original commit: 7db086f55adba0e9ab9cd8e045da97bba3c808e1

--- a/testing/web-platform/tests/web-animations/timing-model/animation-effects/current-iteration.html
+++ b/testing/web-platform/tests/web-animations/timing-model/animation-effects/current-iteration.html
@@ -167,7 +167,7 @@ of
 tests
 )
 {
-const
+let
 testParams
 =
 Object
@@ -204,6 +204,29 @@ join
 '
 )
 ;
+if
+(
+currentTest
+.
+playbackRate
+!
+=
+=
+undefined
+)
+{
+testParams
++
+=
+playbackRate
+:
+{
+currentTest
+.
+playbackRate
+}
+;
+}
 test
 (
 t
@@ -232,6 +255,26 @@ currentTest
 input
 )
 ;
+if
+(
+currentTest
+.
+playbackRate
+!
+=
+=
+undefined
+)
+{
+anim
+.
+playbackRate
+=
+currentTest
+.
+playbackRate
+;
+}
 assert_computed_timing_for_each_phase
 (
 anim
@@ -244,7 +287,7 @@ before
 currentTest
 .
 before
-active
+activeBoundary
 :
 currentTest
 .
