--- a/testing/web-platform/tests/web-animations/timing-model/animation-effects/simple-iteration-progress.html
+++ b/testing/web-platform/tests/web-animations/timing-model/animation-effects/simple-iteration-progress.html
@@ -170,7 +170,7 @@ of
 tests
 )
 {
-const
+let
 testParams
 =
 Object
@@ -207,6 +207,29 @@ join
 '
 )
 ;
+if
+(
+currentTest
+.
+playbackRate
+!
+=
+=
+undefined
+)
+{
+testParams
++
+=
+playbackRate
+:
+{
+currentTest
+.
+playbackRate
+}
+;
+}
 test
 (
 t
@@ -235,6 +258,26 @@ currentTest
 input
 )
 ;
+if
+(
+currentTest
+.
+playbackRate
+!
+=
+=
+undefined
+)
+{
+anim
+.
+playbackRate
+=
+currentTest
+.
+playbackRate
+;
+}
 assert_computed_timing_for_each_phase
 (
 anim
@@ -247,7 +290,7 @@ before
 currentTest
 .
 before
-active
+activeBoundary
 :
 currentTest
 .
