Bug 1406381 - Factor out common code from simple-iteration-progress.html and current-iteration.html; r=hiro
This will become all the more necessary when we extend these definitions to work
with negative playback rates.

MozReview-Commit-ID: ITHEqjprWUy

UltraBlame original commit: 2035e28610da7dddbf1d0cc377a6d6a4c551f1d2

--- a/testing/web-platform/tests/web-animations/timing-model/animation-effects/current-iteration.html
+++ b/testing/web-platform/tests/web-animations/timing-model/animation-effects/current-iteration.html
@@ -106,6 +106,30 @@ js
 script
 >
 <
+script
+src
+=
+"
+.
+.
+/
+.
+.
+/
+resources
+/
+effect
+-
+tests
+.
+js
+"
+>
+<
+/
+script
+>
+<
 body
 >
 <
@@ -208,193 +232,31 @@ currentTest
 input
 )
 ;
-/
-/
-Before
-phase
-assert_equals
+assert_computed_timing_for_each_phase
 (
 anim
-.
-effect
-.
-getComputedTiming
-(
-)
-.
+'
 currentIteration
+'
+{
+before
+:
 currentTest
 .
 before
-)
-;
-/
-/
-Active
-phase
-if
-(
-anim
-.
-effect
-.
-getComputedTiming
-(
-)
-.
-activeDuration
->
-0
-)
-{
-anim
-.
-currentTime
-=
-currentTest
-.
-input
-.
-delay
-|
-|
-0
-;
-assert_equals
-(
-anim
-.
-effect
-.
-getComputedTiming
-(
-)
-.
-currentIteration
+active
+:
 currentTest
 .
 active
-)
-;
-}
-else
-if
-(
-currentTest
-.
-active
-!
-=
-=
-undefined
-)
-{
-assert_false
-(
-'
-Test
-specifies
-an
-active
-phase
-iteration
-to
-check
-but
-the
-'
-+
-'
-animation
-has
-a
-zero
-duration
-'
-)
-;
-}
-/
-/
-After
-phase
-if
-(
-anim
-.
-effect
-.
-getComputedTiming
-(
-)
-.
-activeDuration
-!
-=
-=
-Infinity
-)
-{
-anim
-.
-finish
-(
-)
-;
-assert_equals
-(
-anim
-.
-effect
-.
-getComputedTiming
-(
-)
-.
-currentIteration
+after
+:
 currentTest
 .
 after
+}
 )
 ;
-}
-else
-if
-(
-currentTest
-.
-after
-!
-=
-=
-undefined
-)
-{
-assert_false
-(
-'
-Test
-specifies
-an
-after
-phase
-iteration
-to
-check
-but
-the
-'
-+
-'
-animation
-has
-an
-infinite
-duration
-'
-)
-;
-}
 }
 {
 description
