--- a/testing/web-platform/tests/web-animations/timing-model/animation-effects/simple-iteration-progress.html
+++ b/testing/web-platform/tests/web-animations/timing-model/animation-effects/simple-iteration-progress.html
@@ -109,6 +109,30 @@ js
 script
 >
 <
+script
+src
+=
+"
+.
+.
+/
+.
+.
+/
+resources
+/
+effect
+-
+tests
+.
+js
+"
+>
+<
+/
+script
+>
+<
 body
 >
 <
@@ -211,192 +235,31 @@ currentTest
 input
 )
 ;
-/
-/
-Before
-phase
-assert_equals
+assert_computed_timing_for_each_phase
 (
 anim
-.
-effect
-.
-getComputedTiming
-(
-)
-.
+'
 progress
+'
+{
+before
+:
 currentTest
 .
 before
-)
-;
-/
-/
-Active
-phase
-if
-(
-anim
-.
-effect
-.
-getComputedTiming
-(
-)
-.
-activeDuration
->
-0
-)
-{
-anim
-.
-currentTime
-=
-currentTest
-.
-input
-.
-delay
-|
-|
-0
-;
-assert_equals
-(
-anim
-.
-effect
-.
-getComputedTiming
-(
-)
-.
-progress
+active
+:
 currentTest
 .
 active
-)
-;
-}
-else
-if
-(
-currentTest
-.
-active
-!
-=
-=
-undefined
-)
-{
-assert_false
-(
-'
-Test
-specifies
-an
-active
-progress
-to
-check
-but
-the
-'
-+
-'
-animation
-has
-a
-zero
-duration
-'
-)
-;
-}
-/
-/
-After
-phase
-if
-(
-anim
-.
-effect
-.
-getComputedTiming
-(
-)
-.
-activeDuration
-!
-=
-=
-Infinity
-)
-{
-anim
-.
-finish
-(
-)
-;
-assert_equals
-(
-anim
-.
-effect
-.
-getComputedTiming
-(
-)
-.
-progress
+after
+:
 currentTest
 .
 after
+}
 )
 ;
-}
-else
-if
-(
-currentTest
-.
-after
-!
-=
-=
-undefined
-)
-{
-assert_false
-(
-'
-Test
-specifies
-an
-after
-phase
-progress
-to
-check
-but
-the
-'
-+
-'
-animation
-has
-an
-infinite
-duration
-'
-)
-;
-}
 }
 {
 description
