--- a/testing/web-platform/tests/web-animations/timing-model/animation-effects/simple-iteration-progress.html
+++ b/testing/web-platform/tests/web-animations/timing-model/animation-effects/simple-iteration-progress.html
@@ -2638,6 +2638,255 @@ delay
 '
 )
 ;
+/
+/
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+/
+/
+/
+/
+Negative
+playback
+rate
+tests
+/
+/
+/
+/
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+runTests
+(
+[
+{
+input
+:
+{
+duration
+:
+1
+delay
+:
+1
+fill
+:
+'
+both
+'
+}
+playbackRate
+:
+-
+1
+before
+:
+0
+active
+:
+1
+after
+:
+1
+}
+{
+input
+:
+{
+duration
+:
+0
+delay
+:
+1
+fill
+:
+'
+both
+'
+}
+playbackRate
+:
+-
+1
+before
+:
+0
+after
+:
+1
+}
+{
+input
+:
+{
+duration
+:
+0
+iterations
+:
+0
+delay
+:
+1
+fill
+:
+'
+both
+'
+}
+playbackRate
+:
+-
+1
+before
+:
+0
+after
+:
+0
+}
+]
+'
+Test
+negative
+playback
+rate
+'
+)
+;
 <
 /
 script
