Bug 1400098 - Using common_fileReader.js for test_fileapi in workers, r=qdot
UltraBlame original commit: a7b1484b2367547280e18559dc25205479d23a23

--- a/dom/file/tests/test_fileapi_worker.html
+++ b/dom/file/tests/test_fileapi_worker.html
@@ -16,6 +16,8 @@ Test
 for
 FileReader
 API
+in
+workers
 <
 /
 title
@@ -133,20 +135,100 @@ data
 =
 >
 {
-return
-runTests
+let
+worker
+=
+new
+Worker
+(
+'
+worker_fileReader
+.
+js
+'
+)
+;
+worker
+.
+postMessage
 (
 data
 )
 ;
-}
-)
+worker
 .
-then
+onmessage
+=
+event
+=
+>
+{
+if
 (
+event
+.
+data
+.
+type
+=
+=
+'
+finish
+'
+)
+{
 SimpleTest
 .
 finish
+(
+)
+;
+return
+;
+}
+if
+(
+event
+.
+data
+.
+type
+=
+=
+'
+check
+'
+)
+{
+ok
+(
+event
+.
+data
+.
+status
+event
+.
+data
+.
+msg
+)
+;
+return
+;
+}
+ok
+(
+false
+"
+Unknown
+message
+.
+"
+)
+;
+}
+}
 )
 ;
 <
