--- a/dom/file/tests/test_blobconstructor.html
+++ b/dom/file/tests/test_blobconstructor.html
@@ -86,7 +86,7 @@ javascript
 src
 =
 "
-fileutils
+common_blob
 .
 js
 "
@@ -2036,35 +2036,89 @@ DEFGHIJK
 ]
 ;
 let
+currentTest
+=
+null
+;
+let
 testCounter
 =
 0
 ;
 function
-doTest
+runTests
 (
-data
 )
 {
-testCounter
-+
-+
+if
+(
+!
+currentTest
+|
+|
+currentTest
+[
+2
+]
+.
+length
+=
+=
+0
+)
+{
+if
+(
+testData
+.
+length
+=
+=
+0
+)
+{
+SimpleTest
+.
+finish
+(
+)
 ;
-var
+return
+;
+}
+currentTest
+=
+testData
+.
+shift
+(
+)
+;
++
++
+testCounter
+;
+}
+let
 [
 blobs
 options
-tests
 ]
 =
-data
+currentTest
 ;
-function
-runTest
-(
+let
 test
+=
+currentTest
+[
+2
+]
+.
+shift
+(
 )
-{
+;
 let
 blob
 ;
@@ -2255,7 +2309,7 @@ size
 "
 )
 ;
-testFile
+testBlob
 (
 slice
 test
@@ -2267,91 +2321,43 @@ Test
 +
 testCounter
 )
-;
-}
-if
-(
-Array
 .
-isArray
+then
 (
-tests
-)
-)
-{
-tests
-.
-forEach
 (
-runTest
 )
-;
-}
-else
-{
-try
-{
-let
-blob
 =
-new
-Blob
-(
-blobs
-options
-)
-;
-ok
-(
-false
-"
-NOT
-REACHED
-"
-)
-;
-}
-catch
-(
-e
-)
+>
 {
-is
-(
-e
-.
-name
-tests
-"
-Blob
-constructor
-should
-throw
-"
-+
-tests
-)
-;
-}
-}
 SpecialPowers
 .
 gc
 (
 )
 ;
+runTests
+(
+)
+;
 }
+)
+;
+}
+SimpleTest
+.
+requestLongerTimeout
+(
+2
+)
+;
 SimpleTest
 .
 waitForExplicitFinish
 (
 )
 ;
-testData
-.
-forEach
+runTests
 (
-doTest
 )
 ;
 <
