Bug 1305230 - Splitting test_fileapi.html and test_fileapi_worker.html in multiple files, r=me
UltraBlame original commit: a1407c6e9785c7b678ccfbbba09aca0f9e0cfffa

--- a/dom/file/tests/test_fileapi_encoding.html
+++ b/dom/file/tests/test_fileapi_encoding.html
@@ -16,8 +16,6 @@ Test
 for
 FileReader
 API
-in
-workers
 <
 /
 title
@@ -135,100 +133,20 @@ data
 =
 >
 {
-let
-worker
-=
-new
-Worker
-(
-'
-worker_fileReader
-.
-js
-'
-)
-;
-worker
-.
-postMessage
+return
+runEncodingTests
 (
 data
 )
 ;
-worker
-.
-onmessage
-=
-event
-=
->
-{
-if
-(
-event
-.
-data
-.
-type
-=
-=
-'
-finish
-'
+}
 )
-{
+.
+then
+(
 SimpleTest
 .
 finish
-(
-)
-;
-return
-;
-}
-if
-(
-event
-.
-data
-.
-type
-=
-=
-'
-check
-'
-)
-{
-ok
-(
-event
-.
-data
-.
-status
-event
-.
-data
-.
-msg
-)
-;
-return
-;
-}
-ok
-(
-false
-"
-Unknown
-message
-.
-"
-)
-;
-}
-}
 )
 ;
 <
