Bug 1305230 - Splitting test_fileapi_slice.html and test_fileapi_slice2.html in multiple files, r=me
UltraBlame original commit: b56bf15126d4483075efcb384c8d1c609ea11457

--- a/dom/file/tests/test_fileapi_slice_memFile_2.html
+++ b/dom/file/tests/test_fileapi_slice_memFile_2.html
@@ -20,7 +20,7 @@ API
 Slice
 (
 in
-file
+memory
 )
 <
 /
@@ -156,9 +156,6 @@ waitForExplicitFinish
 (
 )
 ;
-let
-canvasData
-;
 createCanvasURL
 (
 )
@@ -169,41 +166,55 @@ data
 =
 >
 {
-canvasData
+let
+cx
 =
-data
-;
-return
-createFile
 (
-data
 "
-basicTestFile
+canvas
 "
-)
-;
-}
 )
 .
-then
+getContext
 (
-file
+'
+2d
+'
+)
+;
+let
+memFile
 =
->
-{
+cx
+.
+canvas
+.
+mozGetAsFile
+(
+"
+image
+/
+png
+"
+)
+;
 return
 testSlice
 (
-file
-canvasData
+memFile
+data
 .
 length
 "
+image
+/
+png
 "
-canvasData
+data
 "
-fileFile
+memFile
 "
+RANGE_2
 )
 ;
 }
