Backed out changeset b56bf15126d4 (bug 1305230)
UltraBlame original commit: 583b9c959f9de3e5ee4999acc7cd9e9a46bfd1d9

--- a/dom/file/tests/test_fileapi_slice.html
+++ b/dom/file/tests/test_fileapi_slice.html
@@ -20,7 +20,7 @@ API
 Slice
 (
 in
-memory
+file
 )
 <
 /
@@ -156,6 +156,9 @@ waitForExplicitFinish
 (
 )
 ;
+let
+canvasData
+;
 createCanvasURL
 (
 )
@@ -166,55 +169,41 @@ data
 =
 >
 {
-let
-cx
+canvasData
 =
-(
-"
-canvas
-"
-)
-.
-getContext
-(
-'
-2d
-'
-)
+data
 ;
-let
-memFile
-=
-cx
-.
-canvas
-.
-mozGetAsFile
+return
+createFile
 (
+data
 "
-image
-/
-png
+basicTestFile
 "
 )
 ;
+}
+)
+.
+then
+(
+file
+=
+>
+{
 return
 testSlice
 (
-memFile
-data
+file
+canvasData
 .
 length
 "
-image
-/
-png
 "
-data
+canvasData
 "
-memFile
+fileFile
 "
-RANGE_2
 )
 ;
 }
