Backed out changeset 6c0e229ac2e8 (bug 1305230)
UltraBlame original commit: 478cffed4b5f02992cc56ccd74e4ed7d3efe8466

--- a/dom/file/tests/test_fileapi_slice.html
+++ b/dom/file/tests/test_fileapi_slice.html
@@ -18,10 +18,6 @@ File
 API
 +
 Slice
-(
-in
-file
-)
 <
 /
 title
@@ -156,8 +152,39 @@ waitForExplicitFinish
 (
 )
 ;
+/
+/
+Create
+files
+containing
+data
+we
+'
+ll
+test
+with
+.
+We
+'
+ll
+want
+long
+/
+/
+strings
+to
+ensure
+they
+span
+multiple
+buffers
+while
+loading
 let
 canvasData
+;
+let
+fileData
 ;
 createCanvasURL
 (
@@ -191,10 +218,14 @@ file
 =
 >
 {
+fileData
+=
+file
+;
 return
 testSlice
 (
-file
+fileData
 canvasData
 .
 length
@@ -203,6 +234,65 @@ length
 canvasData
 "
 fileFile
+"
+)
+;
+}
+)
+.
+then
+(
+file
+=
+>
+{
+let
+cx
+=
+(
+"
+canvas
+"
+)
+.
+getContext
+(
+'
+2d
+'
+)
+;
+let
+memFile
+=
+cx
+.
+canvas
+.
+mozGetAsFile
+(
+"
+image
+/
+png
+"
+)
+;
+return
+testSlice
+(
+memFile
+canvasData
+.
+length
+"
+image
+/
+png
+"
+canvasData
+"
+memFile
 "
 )
 ;
