Backed out changeset f442143b5b90 (bug 1305230)
UltraBlame original commit: 2f665a0a379f84020e34a982cca213b0b52c7894

--- a/dom/file/tests/test_file_negative_date.html
+++ b/dom/file/tests/test_file_negative_date.html
@@ -77,6 +77,27 @@ js
 script
 >
 <
+script
+type
+=
+"
+text
+/
+javascript
+"
+src
+=
+"
+fileutils
+.
+js
+"
+>
+<
+/
+script
+>
+<
 link
 rel
 =
@@ -146,6 +167,45 @@ Bug
 <
 /
 a
+>
+<
+p
+id
+=
+"
+display
+"
+>
+<
+/
+p
+>
+<
+div
+id
+=
+"
+content
+"
+style
+=
+"
+display
+:
+none
+"
+>
+<
+/
+div
+>
+<
+pre
+id
+=
+"
+test
+"
 >
 <
 script
@@ -390,6 +450,10 @@ value
 <
 /
 script
+>
+<
+/
+pre
 >
 <
 /
