--- a/dom/file/tests/test_fileapi_slice.html
+++ b/dom/file/tests/test_fileapi_slice.html
@@ -202,6 +202,33 @@ input
 p
 >
 <
+div
+id
+=
+"
+content
+"
+style
+=
+"
+display
+:
+none
+"
+>
+<
+/
+div
+>
+<
+pre
+id
+=
+"
+test
+"
+>
+<
 script
 class
 =
@@ -216,6 +243,11 @@ text
 javascript
 "
 >
+var
+fileNum
+=
+1
+;
 SimpleTest
 .
 waitForExplicitFinish
@@ -1382,6 +1414,10 @@ expectedTestCount
 <
 /
 script
+>
+<
+/
+pre
 >
 <
 /
