--- a/dom/file/tests/test_nonascii_blob_url.html
+++ b/dom/file/tests/test_nonascii_blob_url.html
@@ -75,6 +75,27 @@ js
 script
 >
 <
+script
+type
+=
+"
+text
+/
+javascript
+"
+src
+=
+"
+fileutils
+.
+js
+"
+>
+<
+/
+script
+>
+<
 link
 rel
 =
@@ -261,6 +282,10 @@ waitForExplicitFinish
 <
 /
 script
+>
+<
+/
+pre
 >
 <
 /
