--- a/dom/file/tests/test_blobconstructor.html
+++ b/dom/file/tests/test_blobconstructor.html
@@ -86,7 +86,7 @@ javascript
 src
 =
 "
-common_blob
+fileutils
 .
 js
 "
@@ -2036,89 +2036,35 @@ DEFGHIJK
 ]
 ;
 let
-currentTest
-=
-null
-;
-let
 testCounter
 =
 0
 ;
 function
-runTests
+doTest
 (
+data
 )
 {
-if
-(
-!
-currentTest
-|
-|
-currentTest
-[
-2
-]
-.
-length
-=
-=
-0
-)
-{
-if
-(
-testData
-.
-length
-=
-=
-0
-)
-{
-SimpleTest
-.
-finish
-(
-)
-;
-return
-;
-}
-currentTest
-=
-testData
-.
-shift
-(
-)
-;
-+
-+
 testCounter
++
++
 ;
-}
-let
+var
 [
 blobs
 options
+tests
 ]
 =
-currentTest
+data
 ;
-let
-test
-=
-currentTest
-[
-2
-]
-.
-shift
+function
+runTest
 (
+test
 )
-;
+{
 let
 blob
 ;
@@ -2309,7 +2255,7 @@ size
 "
 )
 ;
-testBlob
+testFile
 (
 slice
 test
@@ -2321,43 +2267,91 @@ Test
 +
 testCounter
 )
+;
+}
+if
+(
+Array
 .
-then
+isArray
 (
-(
+tests
 )
-=
->
+)
 {
+tests
+.
+forEach
+(
+runTest
+)
+;
+}
+else
+{
+try
+{
+let
+blob
+=
+new
+Blob
+(
+blobs
+options
+)
+;
+ok
+(
+false
+"
+NOT
+REACHED
+"
+)
+;
+}
+catch
+(
+e
+)
+{
+is
+(
+e
+.
+name
+tests
+"
+Blob
+constructor
+should
+throw
+"
++
+tests
+)
+;
+}
+}
 SpecialPowers
 .
 gc
 (
 )
 ;
-runTests
-(
-)
-;
 }
-)
-;
-}
-SimpleTest
-.
-requestLongerTimeout
-(
-2
-)
-;
 SimpleTest
 .
 waitForExplicitFinish
 (
 )
 ;
-runTests
+testData
+.
+forEach
 (
+doTest
 )
 ;
 <
