Backed out changeset a7b1484b2367 (bug 1400098)
UltraBlame original commit: 5a9bea5b8dd2f74954a38b5d90298f14f2167b51

--- a/dom/workers/test/test_fileReader.html
+++ b/dom/workers/test/test_fileReader.html
@@ -15,7 +15,8 @@ title
 Test
 for
 FileReader
-API
+in
+workers
 <
 /
 title
@@ -75,27 +76,6 @@ css
 /
 >
 <
-script
-type
-=
-"
-text
-/
-javascript
-"
-src
-=
-"
-common_fileReader
-.
-js
-"
->
-<
-/
-script
->
-<
 /
 head
 >
@@ -104,11 +84,6 @@ body
 >
 <
 script
-class
-=
-"
-testbody
-"
 type
 =
 "
@@ -400,40 +375,195 @@ onFilesOpened
 message
 )
 {
-let
-[
-asciiFile
-binaryFile
-nonExistingFile
-utf8TextFile
-utf16TextFile
-emptyFile
-dataUrlFile0
-dataUrlFile1
-dataUrlFile2
-]
+var
+worker
 =
-message
-;
-runTests
+new
+Worker
 (
-asciiFile
-binaryFile
-nonExistingFile
-utf8TextFile
-utf16TextFile
-emptyFile
-dataUrlFile0
-dataUrlFile1
-dataUrlFile2
-testTextData
-)
+'
+worker_fileReader
 .
-then
+js
+'
+)
+;
+worker
+.
+postMessage
 (
+{
+blobs
+:
+message
+testTextData
+:
+testTextData
+testASCIIData
+:
+testASCIIData
+testBinaryData
+:
+testBinaryData
+dataurldata0
+:
+dataurldata0
+dataurldata1
+:
+dataurldata1
+dataurldata2
+:
+dataurldata2
+}
+)
+;
+worker
+.
+onmessage
+=
+function
+(
+e
+)
+{
+var
+msg
+=
+e
+.
+data
+;
+if
+(
+msg
+.
+type
+=
+=
+'
+finish
+'
+)
+{
 SimpleTest
 .
 finish
+(
+)
+;
+return
+;
+}
+if
+(
+msg
+.
+type
+=
+=
+'
+check
+'
+)
+{
+ok
+(
+msg
+.
+status
+msg
+.
+msg
+)
+;
+return
+;
+}
+ok
+(
+false
+"
+Unknown
+message
+.
+"
+)
+;
+}
+}
+function
+convertToUTF16
+(
+s
+)
+{
+res
+=
+"
+"
+;
+for
+(
+var
+i
+=
+0
+;
+i
+<
+s
+.
+length
+;
++
++
+i
+)
+{
+c
+=
+s
+.
+charCodeAt
+(
+i
+)
+;
+res
++
+=
+String
+.
+fromCharCode
+(
+c
+&
+255
+c
+>
+>
+>
+8
+)
+;
+}
+return
+res
+;
+}
+function
+convertToUTF8
+(
+s
+)
+{
+return
+unescape
+(
+encodeURIComponent
+(
+s
+)
 )
 ;
 }
