--- a/editor/libeditor/tests/test_bug1385905.html
+++ b/editor/libeditor/tests/test_bug1385905.html
@@ -215,31 +215,6 @@ waitForFocus
 =
 >
 {
-SpecialPowers
-.
-pushPrefEnv
-(
-{
-"
-set
-"
-:
-[
-[
-"
-editor
-.
-use_div_for_default_newlines
-"
-true
-]
-]
-}
-(
-)
-=
->
-{
 function
 ensureNoMozBR
 (
@@ -293,6 +268,19 @@ test
 ;
 }
 }
+document
+.
+execCommand
+(
+"
+defaultparagraphseparator
+"
+false
+"
+div
+"
+)
+;
 var
 editor
 =
@@ -667,9 +655,6 @@ SimpleTest
 .
 finish
 (
-)
-;
-}
 )
 ;
 }
