Bug 1005755 - Stop using Connector as a singleton; r=rickychien
MozReview-Commit-ID: KtBcN1JpEk6

UltraBlame original commit: 2bc7565e689063eb5308c3961c90b07a241096ab

--- a/devtools/client/netmonitor/index.html
+++ b/devtools/client/netmonitor/index.html
@@ -332,6 +332,24 @@ redux
 ;
 const
 {
+Connector
+}
+=
+require
+(
+"
+.
+/
+src
+/
+connector
+/
+index
+"
+)
+;
+const
+{
 configureStore
 }
 =
@@ -351,10 +369,95 @@ store
 )
 ;
 const
+App
+=
+createFactory
+(
+require
+(
+"
+.
+/
+src
+/
+components
+/
+app
+"
+)
+)
+;
+const
+{
+getDisplayedRequestById
+}
+=
+require
+(
+"
+.
+/
+src
+/
+selectors
+/
+index
+"
+)
+;
+const
+{
+EVENTS
+}
+=
+require
+(
+"
+.
+/
+src
+/
+constants
+"
+)
+;
+/
+/
+Inject
+EventEmitter
+into
+global
+window
+.
+EventEmitter
+.
+decorate
+(
+window
+)
+;
+/
+/
+Configure
+store
+/
+state
+object
+.
+let
+connector
+=
+new
+Connector
+(
+)
+;
+const
 store
 =
 configureStore
 (
+connector
 )
 ;
 const
@@ -379,40 +482,6 @@ store
 dispatch
 )
 ;
-const
-{
-onFirefoxConnect
-onDisconnect
-}
-=
-require
-(
-"
-.
-/
-src
-/
-connector
-/
-index
-"
-)
-;
-/
-/
-Inject
-EventEmitter
-into
-global
-window
-.
-EventEmitter
-.
-decorate
-(
-window
-)
-;
 /
 /
 Inject
@@ -426,6 +495,12 @@ window
 store
 =
 store
+;
+window
+.
+connector
+=
+connector
 ;
 window
 .
@@ -526,25 +601,14 @@ tab
 ;
 }
 ;
-const
-App
-=
-createFactory
-(
-require
-(
-"
+/
+/
+Render
+the
+root
+Application
+component
 .
-/
-src
-/
-components
-/
-app
-"
-)
-)
-;
 const
 sourceMapService
 =
@@ -558,8 +622,9 @@ app
 App
 (
 {
-sourceMapService
+connector
 openLink
+sourceMapService
 }
 )
 ;
@@ -577,8 +642,20 @@ this
 mount
 )
 ;
+/
+/
+Connect
+to
+the
+Firefox
+backend
+by
+default
+.
 return
-onFirefoxConnect
+connector
+.
+connectFirefox
 (
 connection
 actions
@@ -600,8 +677,268 @@ mount
 )
 ;
 return
-onDisconnect
+connector
+.
+disconnect
 (
+)
+;
+}
+/
+*
+*
+*
+Selects
+the
+specified
+request
+in
+the
+waterfall
+and
+opens
+the
+details
+view
+.
+*
+This
+is
+a
+firefox
+toolbox
+specific
+API
+which
+providing
+an
+ability
+to
+inspect
+*
+a
+network
+request
+directly
+from
+other
+internal
+toolbox
+panel
+.
+*
+*
+param
+{
+string
+}
+requestId
+The
+actor
+ID
+of
+the
+request
+to
+inspect
+.
+*
+return
+{
+object
+}
+A
+promise
+resolved
+once
+the
+task
+finishes
+.
+*
+/
+inspectRequest
+(
+requestId
+)
+{
+/
+/
+Look
+for
+the
+request
+in
+the
+existing
+ones
+or
+wait
+for
+it
+to
+appear
+if
+/
+/
+the
+network
+monitor
+is
+still
+loading
+.
+return
+new
+Promise
+(
+(
+resolve
+)
+=
+>
+{
+let
+request
+=
+null
+;
+let
+inspector
+=
+(
+)
+=
+>
+{
+request
+=
+getDisplayedRequestById
+(
+store
+.
+getState
+(
+)
+requestId
+)
+;
+if
+(
+!
+request
+)
+{
+/
+/
+Reset
+filters
+so
+that
+the
+request
+is
+visible
+.
+actions
+.
+toggleRequestFilterType
+(
+"
+all
+"
+)
+;
+request
+=
+getDisplayedRequestById
+(
+store
+.
+getState
+(
+)
+requestId
+)
+;
+}
+/
+/
+If
+the
+request
+was
+found
+select
+it
+.
+Otherwise
+this
+function
+will
+be
+/
+/
+called
+again
+once
+new
+requests
+arrive
+.
+if
+(
+request
+)
+{
+window
+.
+off
+(
+EVENTS
+.
+REQUEST_ADDED
+inspector
+)
+;
+actions
+.
+selectRequest
+(
+request
+.
+id
+)
+;
+resolve
+(
+)
+;
+}
+}
+;
+inspector
+(
+)
+;
+if
+(
+!
+request
+)
+{
+window
+.
+on
+(
+EVENTS
+.
+REQUEST_ADDED
+inspector
+)
+;
+}
+}
 )
 ;
 }
