--- a/devtools/client/webconsole/new-console-output/test/mochitest/test-bug-869003-iframe.html
+++ b/devtools/client/webconsole/new-console-output/test/mochitest/test-bug-869003-iframe.html
@@ -75,6 +75,23 @@ bug
 869003
 }
 ;
+var
+f
+=
+Object
+.
+assign
+(
+function
+func
+(
+arg
+)
+{
+}
+o
+)
+;
 console
 .
 log
@@ -83,6 +100,7 @@ log
 foobar
 "
 o
+f
 )
 ;
 }
