Bug 1407530 - Update formautofill.properties string IDs and localization notes. r=flod,lchang
MozReview-Commit-ID: uHWhQmrVgu

UltraBlame original commit: e3bf74eeaecb13c6241104383de59636808d30af

--- a/browser/extensions/formautofill/content/editAddress.xhtml
+++ b/browser/extensions/formautofill/content/editAddress.xhtml
@@ -747,7 +747,7 @@ data
 localization
 =
 "
-cancel
+cancelBtnLabel
 "
 /
 >
@@ -768,7 +768,7 @@ data
 localization
 =
 "
-save
+saveBtnLabel
 "
 /
 >
