--- a/browser/extensions/formautofill/content/manageCreditCards.xhtml
+++ b/browser/extensions/formautofill/content/manageCreditCards.xhtml
@@ -264,7 +264,7 @@ data
 localization
 =
 "
-remove
+removeBtnLabel
 "
 /
 >
@@ -286,7 +286,7 @@ data
 localization
 =
 "
-showCreditCards
+showCreditCardsBtnLabel
 "
 /
 >
@@ -322,7 +322,7 @@ data
 localization
 =
 "
-add
+addBtnLabel
 "
 /
 >
@@ -347,7 +347,7 @@ data
 localization
 =
 "
-edit
+editBtnLabel
 "
 /
 >
