--- a/browser/extensions/formautofill/content/editCreditCard.xhtml
+++ b/browser/extensions/formautofill/content/editCreditCard.xhtml
@@ -555,7 +555,7 @@ data
 localization
 =
 "
-cancel
+cancelBtnLabel
 "
 /
 >
@@ -576,7 +576,7 @@ data
 localization
 =
 "
-save
+saveBtnLabel
 "
 /
 >
