--- a/browser/extensions/formautofill/content/manageAddresses.xhtml
+++ b/browser/extensions/formautofill/content/manageAddresses.xhtml
@@ -262,7 +262,7 @@ data
 localization
 =
 "
-remove
+removeBtnLabel
 "
 /
 >
@@ -298,7 +298,7 @@ data
 localization
 =
 "
-add
+addBtnLabel
 "
 /
 >
@@ -323,7 +323,7 @@ data
 localization
 =
 "
-edit
+editBtnLabel
 "
 /
 >
