Bug 1305230 - Splitting test_fileapi_slice in four files, r=me
UltraBlame original commit: a62b4707335a27966cdd21fbb01dc5847d2b4b18

--- a/dom/file/tests/test_fileapi_slice_memFile_2.html
+++ b/dom/file/tests/test_fileapi_slice_memFile_2.html
@@ -156,6 +156,13 @@ waitForExplicitFinish
 (
 )
 ;
+SimpleTest
+.
+requestLongerTimeout
+(
+4
+)
+;
 createCanvasURL
 (
 )
@@ -214,6 +221,7 @@ data
 "
 memFile
 "
+RANGE_2
 )
 ;
 }
