--- a/dom/file/tests/test_fileapi_slice_realFile_2.html
+++ b/dom/file/tests/test_fileapi_slice_realFile_2.html
@@ -156,6 +156,13 @@ waitForExplicitFinish
 (
 )
 ;
+SimpleTest
+.
+requestLongerTimeout
+(
+4
+)
+;
 let
 canvasData
 ;
@@ -204,6 +211,7 @@ canvasData
 "
 fileFile
 "
+RANGE_2
 )
 ;
 }
