Bug 1305230 - Splitting test_fileapi.html and test_fileapi_worker.html in multiple files, r=me
UltraBlame original commit: e81517c2358cb5794de1ebd07d6a9eb1677be61e

--- a/dom/file/tests/test_fileapi_encoding_worker.html
+++ b/dom/file/tests/test_fileapi_encoding_worker.html
@@ -16,6 +16,8 @@ Test
 for
 FileReader
 API
+in
+workers
 <
 /
 title
@@ -123,6 +125,13 @@ waitForExplicitFinish
 (
 )
 ;
+SimpleTest
+.
+requestLongerTimeout
+(
+3
+)
+;
 test_setup
 (
 )
@@ -133,20 +142,107 @@ data
 =
 >
 {
-return
-runTests
+let
+worker
+=
+new
+Worker
 (
-data
+'
+worker_fileReader
+.
+js
+'
 )
 ;
+worker
+.
+postMessage
+(
+{
+tests
+:
+'
+encoding
+'
+data
 }
 )
+;
+worker
 .
-then
+onmessage
+=
+event
+=
+>
+{
+if
 (
+event
+.
+data
+.
+type
+=
+=
+'
+finish
+'
+)
+{
 SimpleTest
 .
 finish
+(
+)
+;
+return
+;
+}
+if
+(
+event
+.
+data
+.
+type
+=
+=
+'
+check
+'
+)
+{
+ok
+(
+event
+.
+data
+.
+status
+event
+.
+data
+.
+msg
+)
+;
+return
+;
+}
+ok
+(
+false
+"
+Unknown
+message
+.
+"
+)
+;
+}
+}
 )
 ;
 <
