--- a/dom/file/tests/test_fileapi_encoding.html
+++ b/dom/file/tests/test_fileapi_encoding.html
@@ -16,8 +16,6 @@ Test
 for
 FileReader
 API
-in
-workers
 <
 /
 title
@@ -125,6 +123,13 @@ waitForExplicitFinish
 (
 )
 ;
+SimpleTest
+.
+requestLongerTimeout
+(
+3
+)
+;
 test_setup
 (
 )
@@ -135,100 +140,20 @@ data
 =
 >
 {
-let
-worker
-=
-new
-Worker
-(
-'
-worker_fileReader
-.
-js
-'
-)
-;
-worker
-.
-postMessage
+return
+runEncodingTests
 (
 data
 )
 ;
-worker
-.
-onmessage
-=
-event
-=
->
-{
-if
-(
-event
-.
-data
-.
-type
-=
-=
-'
-finish
-'
+}
 )
-{
+.
+then
+(
 SimpleTest
 .
 finish
-(
-)
-;
-return
-;
-}
-if
-(
-event
-.
-data
-.
-type
-=
-=
-'
-check
-'
-)
-{
-ok
-(
-event
-.
-data
-.
-status
-event
-.
-data
-.
-msg
-)
-;
-return
-;
-}
-ok
-(
-false
-"
-Unknown
-message
-.
-"
-)
-;
-}
-}
 )
 ;
 <
