Backed out changeset e81517c2358c (bug 1305230)
UltraBlame original commit: 8434b1a6091f0fc06f1ef23e20dd3307da08a6c1

--- a/dom/file/tests/test_fileapi.html
+++ b/dom/file/tests/test_fileapi.html
@@ -16,8 +16,6 @@ Test
 for
 FileReader
 API
-in
-workers
 <
 /
 title
@@ -125,13 +123,6 @@ waitForExplicitFinish
 (
 )
 ;
-SimpleTest
-.
-requestLongerTimeout
-(
-3
-)
-;
 test_setup
 (
 )
@@ -142,107 +133,20 @@ data
 =
 >
 {
-let
-worker
-=
-new
-Worker
+return
+runTests
 (
-'
-worker_fileReader
-.
-js
-'
+data
 )
 ;
-worker
-.
-postMessage
-(
-{
-tests
-:
-'
-encoding
-'
-data
 }
 )
-;
-worker
 .
-onmessage
-=
-event
-=
->
-{
-if
+then
 (
-event
-.
-data
-.
-type
-=
-=
-'
-finish
-'
-)
-{
 SimpleTest
 .
 finish
-(
-)
-;
-return
-;
-}
-if
-(
-event
-.
-data
-.
-type
-=
-=
-'
-check
-'
-)
-{
-ok
-(
-event
-.
-data
-.
-status
-event
-.
-data
-.
-msg
-)
-;
-return
-;
-}
-ok
-(
-false
-"
-Unknown
-message
-.
-"
-)
-;
-}
-}
 )
 ;
 <
