Bug 1381190 - Change to COSE Algorithm identifiers for WebAuthn r=qdot,ttaubert
The WD-06 (and later) WebAuthn specs choose to move to integer algorithm
identifiers for the signatures [1], with a handful of algorithms identified [2].
U2F devices only support ES256 (e.g., COSE ID "-7"), so that's all that is
implemented here.

Note that the spec also now requires that we accept empty lists of parameters,
and in that case, the RP says they aren't picky, so this changes what happens
when the parameter list is empty (but still aborts when the list is non-empty
but doesn't have anything we can use) [3].

There's a follow-on to move parameter-validation logic into the U2FTokenManager
in Bug 1409220.

[1] https://w3c.github.io/webauthn/#dictdef-publickeycredentialparameters
[2] https://w3c.github.io/webauthn/#alg-identifier
[3] https://w3c.github.io/webauthn/#createCredential bullet #12

MozReview-Commit-ID: KgL7mQ9u1uq

UltraBlame original commit: 35f1751b91a9fff2c6f4649ce90aec5d1eb72976

--- a/dom/webauthn/tests/test_webauthn_make_credential.html
+++ b/dom/webauthn/tests/test_webauthn_make_credential.html
@@ -656,9 +656,7 @@ key
 "
 alg
 :
-"
-es256
-"
+cose_alg_ECDSA_w_SHA256
 }
 ;
 let
@@ -674,9 +672,7 @@ key
 "
 alg
 :
-"
-3DES
-"
+cose_alg_ECDSA_w_SHA512
 }
 ;
 let
@@ -804,8 +800,25 @@ expectTypeError
 /
 Test
 without
-a
-parameter
+any
+parameters
+;
+this
+is
+acceptable
+meaning
+the
+RP
+ID
+is
+/
+/
+happy
+to
+take
+any
+credential
+type
 function
 (
 )
@@ -843,12 +856,12 @@ makeCredentialOptions
 .
 then
 (
-arrivingHereIsBad
+arrivingHereIsGood
 )
 .
 catch
 (
-expectNotSupportedError
+arrivingHereIsBad
 )
 ;
 }
