--- a/dom/webauthn/tests/test_webauthn_loopback.html
+++ b/dom/webauthn/tests/test_webauthn_loopback.html
@@ -1495,9 +1495,7 @@ key
 "
 alg
 :
-"
-ES256
-"
+cose_alg_ECDSA_w_SHA256
 }
 ;
 let
@@ -1625,9 +1623,7 @@ key
 "
 alg
 :
-"
-ES256
-"
+cose_alg_ECDSA_w_SHA256
 }
 ;
 let
