Bug 1407842 - Wrap fullscreen api calls with SpecialPowers. r=jib
MozReview-Commit-ID: 9bCO80q2sJB

UltraBlame original commit: 5b6b503cddf3ffaf742b100c505084dc4001688f

--- a/dom/media/tests/mochitest/test_getUserMedia_basicScreenshare.html
+++ b/dom/media/tests/mochitest/test_getUserMedia_basicScreenshare.html
@@ -969,13 +969,23 @@ reject
 =
 >
 {
+SpecialPowers
+.
+wrap
+(
 document
+)
 .
 onfullscreenchange
 =
 resolve
 ;
+SpecialPowers
+.
+wrap
+(
 document
+)
 .
 onfullscreenerror
 =
@@ -1018,7 +1028,12 @@ and
 having
 focus
 .
+SpecialPowers
+.
+wrap
+(
 canvas
+)
 .
 requestFullscreen
 (
@@ -1413,7 +1428,12 @@ detachFromMediaElement
 (
 )
 ;
+SpecialPowers
+.
+wrap
+(
 document
+)
 .
 exitFullscreen
 (
