--- a/dom/file/tests/test_fileapi_slice_realFile_2.html
+++ b/dom/file/tests/test_fileapi_slice_realFile_2.html
@@ -20,7 +20,7 @@ API
 Slice
 (
 in
-memory
+file
 )
 <
 /
@@ -156,6 +156,16 @@ waitForExplicitFinish
 (
 )
 ;
+SimpleTest
+.
+requestLongerTimeout
+(
+4
+)
+;
+let
+canvasData
+;
 createCanvasURL
 (
 )
@@ -166,54 +176,42 @@ data
 =
 >
 {
-let
-cx
+canvasData
 =
-(
-"
-canvas
-"
-)
-.
-getContext
-(
-'
-2d
-'
-)
+data
 ;
-let
-memFile
-=
-cx
-.
-canvas
-.
-mozGetAsFile
+return
+createFile
 (
+data
 "
-image
-/
-png
+basicTestFile2
 "
 )
 ;
+}
+)
+.
+then
+(
+file
+=
+>
+{
 return
 testSlice
 (
-memFile
-data
+file
+canvasData
 .
 length
 "
-image
-/
-png
 "
-data
+canvasData
 "
-memFile
+fileFile
 "
+RANGE_2
 )
 ;
 }
