Bug 1204254 P11 Notify "service-worker-synthesized-response" topic when synthesis starts so devtools can trace the channel. r=asuth
UltraBlame original commit: e38a6e3ea99224c639e5b30ad4138305afceb4f6

--- a/dom/workers/test/serviceworkers/test_devtools_serviceworker_interception.html
+++ b/dom/workers/test/serviceworkers/test_devtools_serviceworker_interception.html
@@ -610,26 +610,14 @@ aResolve
 var
 topic
 =
-aFetch
-?
 "
 http
 -
 on
 -
-examine
+stop
 -
-response
-"
-:
-"
-service
--
-worker
--
-synthesized
--
-response
+request
 "
 ;
 function
