Bug 1204254 P15 Try to make test_devtools_serviceworker_interception.html handle --verify runs again. r=asuth
UltraBlame original commit: c6b3520e30fe711d5e6fd49923171d35de0e5872

--- a/dom/workers/test/serviceworkers/test_fetch_integrity.html
+++ b/dom/workers/test/serviceworkers/test_fetch_integrity.html
@@ -509,6 +509,27 @@ scope
 }
 )
 ;
+let
+worker
+=
+registration
+.
+installing
+|
+|
+registration
+.
+active
+;
+worker
+.
+postMessage
+(
+'
+claim
+'
+)
+;
 await
 waitForControlled
 ;
