Bug 1408552 - Make sure we only instantiate CacheStorageService in the main process r=mayhemer
* A memory leak occurs when this happens in the content process
* I added an assertion that we only create it in the parent process

MozReview-Commit-ID: 1UTyusRg0qx

UltraBlame original commit: dfb2381890025b18ece4c80fe95a4392bd06c7c9

--- a/dom/base/test/test_bug482935.html
+++ b/dom/base/test/test_bug482935.html
@@ -116,6 +116,15 @@ clearCache
 (
 )
 {
+if
+(
+SpecialPowers
+.
+isMainProcess
+(
+)
+)
+{
 SpecialPowers
 .
 Cc
@@ -150,6 +159,7 @@ clear
 (
 )
 ;
+}
 }
 /
 /
