Bug 1403959, part 3 - Manually fix some xpcom/ eslint failures and enable it. r=froydnj
Renames are because another location also defined that
variable. Unused definitions are eliminated.

The .eslintrc.js file makes eslint expect XPCShell global variables.

MozReview-Commit-ID: Fafm5o45bme

UltraBlame original commit: 4bdb274daa63e61cac419b0f2f1483f710a6644f

--- a/xpcom/string/crashtests/394275-1.html
+++ b/xpcom/string/crashtests/394275-1.html
@@ -18,6 +18,16 @@ style
 "
 )
 ;
+/
+/
+eslint
+-
+disable
+-
+line
+no
+-
+undef
 document
 .
 documentElement
@@ -27,6 +37,16 @@ appendChild
 style
 )
 ;
+/
+/
+eslint
+-
+disable
+-
+line
+no
+-
+undef
 style
 .
 textContent
@@ -37,6 +57,16 @@ tz
 uDAB2
 "
 ;
+/
+/
+eslint
+-
+disable
+-
+line
+no
+-
+undef
 <
 /
 script
