Bug 1401207 - Refactor DAMP to more easily filter subtests. r=bgrins
MozReview-Commit-ID: GXpujntQ5F2

UltraBlame original commit: 3219e7712baaa518edb336535cbc7b27c3b4055b

--- a/testing/talos/talos/tests/devtools/addon/content/damp.html
+++ b/testing/talos/talos/tests/devtools/addon/content/damp.html
@@ -78,34 +78,130 @@ rest
 subtests
 :
 {
-webconsoleOpen
+"
+cold
+.
+inspector
+"
 :
 true
-inspectorOpen
+"
+simple
+.
+webconsole
+"
 :
 true
-debuggerOpen
+"
+simple
+.
+inspector
+"
 :
 true
-styleEditorOpen
+"
+simple
+.
+debugger
+"
 :
 true
-performanceOpen
+"
+simple
+.
+styleeditor
+"
 :
 true
-netmonitorOpen
+"
+simple
+.
+performance
+"
 :
 true
+"
+simple
+.
+netmonitor
+"
+:
+true
+"
+simple
+.
 saveAndReadHeapSnapshot
+"
 :
 true
-consoleBulkLogging
+"
+complicated
+.
+webconsole
+"
 :
 true
-consoleStreamLogging
+"
+complicated
+.
+inspector
+"
 :
 true
-consoleObjectExpansion
+"
+complicated
+.
+debugger
+"
+:
+true
+"
+complicated
+.
+styleeditor
+"
+:
+true
+"
+complicated
+.
+performance
+"
+:
+true
+"
+complicated
+.
+netmonitor
+"
+:
+true
+"
+complicated
+.
+saveAndReadHeapSnapshot
+"
+:
+true
+"
+console
+.
+bulklog
+"
+:
+true
+"
+console
+.
+streamlog
+"
+:
+true
+"
+console
+.
+objectexpand
+"
 :
 true
 }
@@ -115,7 +211,26 @@ var
 testsInfo
 =
 {
-webconsoleOpen
+"
+cold
+.
+inspector
+"
+:
+"
+Measure
+first
+open
+toolbox
+on
+inspector
+panel
+"
+"
+simple
+.
+webconsole
+"
 :
 "
 Measure
@@ -126,8 +241,15 @@ toolbox
 on
 webconsole
 panel
+against
+simple
+document
 "
-inspectorOpen
+"
+simple
+.
+inspector
+"
 :
 "
 Measure
@@ -138,8 +260,15 @@ toolbox
 on
 inspector
 panel
+against
+simple
+document
 "
-debuggerOpen
+"
+simple
+.
+debugger
+"
 :
 "
 Measure
@@ -150,8 +279,15 @@ toolbox
 on
 debugger
 panel
+against
+simple
+document
 "
-styleEditorOpen
+"
+simple
+.
+styleeditor
+"
 :
 "
 Measure
@@ -163,8 +299,15 @@ on
 style
 editor
 panel
+against
+simple
+document
 "
-performanceOpen
+"
+simple
+.
+performance
+"
 :
 "
 Measure
@@ -175,8 +318,15 @@ toolbox
 on
 performance
 panel
+against
+simple
+document
 "
-netmonitorOpen
+"
+simple
+.
+netmonitor
+"
 :
 "
 Measure
@@ -188,8 +338,15 @@ on
 network
 monitor
 panel
+against
+simple
+document
 "
+"
+simple
+.
 saveAndReadHeapSnapshot
+"
 :
 "
 Measure
@@ -206,8 +363,156 @@ save
 read
 heap
 snapshot
+against
+simple
+document
 "
-consoleBulkLogging
+"
+complicated
+.
+webconsole
+"
+:
+"
+Measure
+open
+/
+close
+toolbox
+on
+webconsole
+panel
+against
+complicated
+document
+"
+"
+complicated
+.
+inspector
+"
+:
+"
+Measure
+open
+/
+close
+toolbox
+on
+inspector
+panel
+against
+complicated
+document
+"
+"
+complicated
+.
+debugger
+"
+:
+"
+Measure
+open
+/
+close
+toolbox
+on
+debugger
+panel
+against
+complicated
+document
+"
+"
+complicated
+.
+styleeditor
+"
+:
+"
+Measure
+open
+/
+close
+toolbox
+on
+style
+editor
+panel
+against
+complicated
+document
+"
+"
+complicated
+.
+performance
+"
+:
+"
+Measure
+open
+/
+close
+toolbox
+on
+performance
+panel
+against
+complicated
+document
+"
+"
+complicated
+.
+netmonitor
+"
+:
+"
+Measure
+open
+/
+close
+toolbox
+on
+network
+monitor
+panel
+against
+complicated
+document
+"
+"
+complicated
+.
+saveAndReadHeapSnapshot
+"
+:
+"
+Measure
+open
+/
+close
+toolbox
+on
+memory
+panel
+and
+save
+/
+read
+heap
+snapshot
+against
+complicated
+document
+"
+"
+console
+.
+bulklog
+"
 :
 "
 Measure
@@ -224,7 +529,11 @@ statements
 to
 appear
 "
-consoleStreamLogging
+"
+console
+.
+streamlog
+"
 :
 "
 Measure
@@ -240,7 +549,11 @@ console
 log
 statements
 "
-consoleObjectExpansion
+"
+console
+.
+objectexpand
+"
 :
 "
 Measure
