Backed out changeset 3219e7712baa (bug 1401207) for eslint failures in testing/talos/talos/tests/devtools/addon/content/damp.js. r=backout
UltraBlame original commit: 404101537948219eafd5f6729615a5d51e4cb5f8

--- a/testing/talos/talos/tests/devtools/addon/content/damp.html
+++ b/testing/talos/talos/tests/devtools/addon/content/damp.html
@@ -78,130 +78,34 @@ rest
 subtests
 :
 {
-"
-cold
-.
-inspector
-"
+webconsoleOpen
 :
 true
-"
-simple
-.
-webconsole
-"
+inspectorOpen
 :
 true
-"
-simple
-.
-inspector
-"
+debuggerOpen
 :
 true
-"
-simple
-.
-debugger
-"
+styleEditorOpen
 :
 true
-"
-simple
-.
-styleeditor
-"
+performanceOpen
 :
 true
-"
-simple
-.
-performance
-"
+netmonitorOpen
 :
 true
-"
-simple
-.
-netmonitor
-"
-:
-true
-"
-simple
-.
 saveAndReadHeapSnapshot
-"
 :
 true
-"
-complicated
-.
-webconsole
-"
+consoleBulkLogging
 :
 true
-"
-complicated
-.
-inspector
-"
+consoleStreamLogging
 :
 true
-"
-complicated
-.
-debugger
-"
-:
-true
-"
-complicated
-.
-styleeditor
-"
-:
-true
-"
-complicated
-.
-performance
-"
-:
-true
-"
-complicated
-.
-netmonitor
-"
-:
-true
-"
-complicated
-.
-saveAndReadHeapSnapshot
-"
-:
-true
-"
-console
-.
-bulklog
-"
-:
-true
-"
-console
-.
-streamlog
-"
-:
-true
-"
-console
-.
-objectexpand
-"
+consoleObjectExpansion
 :
 true
 }
@@ -211,26 +115,7 @@ var
 testsInfo
 =
 {
-"
-cold
-.
-inspector
-"
-:
-"
-Measure
-first
-open
-toolbox
-on
-inspector
-panel
-"
-"
-simple
-.
-webconsole
-"
+webconsoleOpen
 :
 "
 Measure
@@ -241,15 +126,8 @@ toolbox
 on
 webconsole
 panel
-against
-simple
-document
 "
-"
-simple
-.
-inspector
-"
+inspectorOpen
 :
 "
 Measure
@@ -260,15 +138,8 @@ toolbox
 on
 inspector
 panel
-against
-simple
-document
 "
-"
-simple
-.
-debugger
-"
+debuggerOpen
 :
 "
 Measure
@@ -279,15 +150,8 @@ toolbox
 on
 debugger
 panel
-against
-simple
-document
 "
-"
-simple
-.
-styleeditor
-"
+styleEditorOpen
 :
 "
 Measure
@@ -299,15 +163,8 @@ on
 style
 editor
 panel
-against
-simple
-document
 "
-"
-simple
-.
-performance
-"
+performanceOpen
 :
 "
 Measure
@@ -318,15 +175,8 @@ toolbox
 on
 performance
 panel
-against
-simple
-document
 "
-"
-simple
-.
-netmonitor
-"
+netmonitorOpen
 :
 "
 Measure
@@ -338,15 +188,8 @@ on
 network
 monitor
 panel
-against
-simple
-document
 "
-"
-simple
-.
 saveAndReadHeapSnapshot
-"
 :
 "
 Measure
@@ -363,156 +206,8 @@ save
 read
 heap
 snapshot
-against
-simple
-document
 "
-"
-complicated
-.
-webconsole
-"
-:
-"
-Measure
-open
-/
-close
-toolbox
-on
-webconsole
-panel
-against
-complicated
-document
-"
-"
-complicated
-.
-inspector
-"
-:
-"
-Measure
-open
-/
-close
-toolbox
-on
-inspector
-panel
-against
-complicated
-document
-"
-"
-complicated
-.
-debugger
-"
-:
-"
-Measure
-open
-/
-close
-toolbox
-on
-debugger
-panel
-against
-complicated
-document
-"
-"
-complicated
-.
-styleeditor
-"
-:
-"
-Measure
-open
-/
-close
-toolbox
-on
-style
-editor
-panel
-against
-complicated
-document
-"
-"
-complicated
-.
-performance
-"
-:
-"
-Measure
-open
-/
-close
-toolbox
-on
-performance
-panel
-against
-complicated
-document
-"
-"
-complicated
-.
-netmonitor
-"
-:
-"
-Measure
-open
-/
-close
-toolbox
-on
-network
-monitor
-panel
-against
-complicated
-document
-"
-"
-complicated
-.
-saveAndReadHeapSnapshot
-"
-:
-"
-Measure
-open
-/
-close
-toolbox
-on
-memory
-panel
-and
-save
-/
-read
-heap
-snapshot
-against
-complicated
-document
-"
-"
-console
-.
-bulklog
-"
+consoleBulkLogging
 :
 "
 Measure
@@ -529,11 +224,7 @@ statements
 to
 appear
 "
-"
-console
-.
-streamlog
-"
+consoleStreamLogging
 :
 "
 Measure
@@ -549,11 +240,7 @@ console
 log
 statements
 "
-"
-console
-.
-objectexpand
-"
+consoleObjectExpansion
 :
 "
 Measure
