--- a/dom/html/test/test_fullscreen-api.html
+++ b/dom/html/test/test_fullscreen-api.html
@@ -314,13 +314,6 @@ html
 "
 file_fullscreen
 -
-plugins
-.
-html
-"
-"
-file_fullscreen
--
 hidden
 .
 html
@@ -534,6 +527,66 @@ shouldSkipTest
 test
 )
 {
+if
+(
+SpecialPowers
+.
+Cc
+[
+"
+mozilla
+.
+org
+/
+gfx
+/
+info
+;
+1
+"
+]
+.
+getService
+(
+SpecialPowers
+.
+Ci
+.
+nsIGfxInfo
+)
+.
+isHeadless
+&
+&
+test
+=
+=
+"
+file_fullscreen
+-
+plugins
+.
+html
+"
+)
+{
+todo
+(
+false
+{
+test
+}
+skipped
+due
+to
+bug
+1409805
+)
+;
+return
+true
+;
+}
 if
 (
 !
