--- a/testing/web-platform/tests/XMLHttpRequest/open-url-encoding.htm
+++ b/testing/web-platform/tests/XMLHttpRequest/open-url-encoding.htm
@@ -217,7 +217,9 @@ query
 )
 "
 %
-DF
+C3
+%
+9F
 "
 )
 }
@@ -281,17 +283,22 @@ query
 )
 "
 %
-26
+EF
 %
-2355357
+BF
 %
-3B
+BD
 "
 )
 }
 "
 lone
 surrogate
+should
+return
+U
++
+FFFD
 "
 )
 ;
