--- a/dom/tests/mochitest/webcomponents/test_shadowroot_style.html
+++ b/dom/tests/mochitest/webcomponents/test_shadowroot_style.html
@@ -148,6 +148,30 @@ a
 <
 script
 >
+if
+(
+!
+SpecialPowers
+.
+DOMWindowUtils
+.
+isStyledByServo
+)
+{
+SimpleTest
+.
+expectAssertions
+(
+3
+3
+)
+;
+/
+/
+GeckoRestyleManager
+stuff
+.
+}
 /
 /
 Create
