Bug 1398038 - Split keyframe-tests.js out of keyframe-utils.js; r=hiro
It doesn't really make sense to have test data in a file call 'utils'.

MozReview-Commit-ID: BTMbeZKnvtJ

UltraBlame original commit: 5fe9bdcdb9fd15436a18d065bfdb9ec25b5a8371

--- a/testing/web-platform/tests/web-animations/interfaces/Animatable/animate.html
+++ b/testing/web-platform/tests/web-animations/interfaces/Animatable/animate.html
@@ -157,6 +157,30 @@ js
 script
 >
 <
+script
+src
+=
+"
+.
+.
+/
+.
+.
+/
+resources
+/
+keyframe
+-
+tests
+.
+js
+"
+>
+<
+/
+script
+>
+<
 body
 >
 <
