--- a/testing/web-platform/tests/web-animations/interfaces/KeyframeEffect/setKeyframes.html
+++ b/testing/web-platform/tests/web-animations/interfaces/KeyframeEffect/setKeyframes.html
@@ -134,6 +134,30 @@ js
 script
 >
 <
+script
+src
+=
+"
+.
+.
+/
+.
+.
+/
+resources
+/
+keyframe
+-
+tests
+.
+js
+"
+>
+<
+/
+script
+>
+<
 body
 >
 <
