Bug 1398038 - Merge property-indexed and sequence keyframe lists; r=hiro
There doesn't seem to be any need to separate these and it only leads to
duplicated code.

MozReview-Commit-ID: IWXTPMHMls0

UltraBlame original commit: e7824a6dfb94690831fdf839babf6979a470caf9

--- a/testing/web-platform/tests/web-animations/interfaces/Animatable/animate.html
+++ b/testing/web-platform/tests/web-animations/interfaces/Animatable/animate.html
@@ -851,76 +851,7 @@ subTest
 }
 )
 ;
-gPropertyIndexedKeyframesTests
-.
-forEach
-(
-function
-(
-subtest
-)
-{
-test
-(
-function
-(
-t
-)
-{
-var
-div
-=
-createDiv
-(
-t
-)
-;
-var
-anim
-=
-div
-.
-animate
-(
-subtest
-.
-input
-2000
-)
-;
-assert_frame_lists_equal
-(
-anim
-.
-effect
-.
-getKeyframes
-(
-)
-subtest
-.
-output
-)
-;
-}
-'
-Element
-.
-animate
-(
-)
-accepts
-'
-+
-subtest
-.
-desc
-)
-;
-}
-)
-;
-gKeyframeSequenceTests
+gKeyframesTests
 .
 forEach
 (
