--- a/testing/web-platform/tests/web-animations/interfaces/KeyframeEffect/setKeyframes.html
+++ b/testing/web-platform/tests/web-animations/interfaces/KeyframeEffect/setKeyframes.html
@@ -265,72 +265,7 @@ keyframe
 '
 )
 ;
-gPropertyIndexedKeyframesTests
-.
-forEach
-(
-function
-(
-subtest
-)
-{
-test
-(
-function
-(
-t
-)
-{
-var
-effect
-=
-new
-KeyframeEffect
-(
-target
-{
-}
-)
-;
-effect
-.
-setKeyframes
-(
-subtest
-.
-input
-)
-;
-assert_frame_lists_equal
-(
-effect
-.
-getKeyframes
-(
-)
-subtest
-.
-output
-)
-;
-}
-'
-Keyframes
-can
-be
-replaced
-with
-'
-+
-subtest
-.
-desc
-)
-;
-}
-)
-;
-gKeyframeSequenceTests
+gKeyframesTests
 .
 forEach
 (
