--- a/testing/web-platform/tests/web-animations/interfaces/KeyframeEffect/constructor.html
+++ b/testing/web-platform/tests/web-animations/interfaces/KeyframeEffect/constructor.html
@@ -936,129 +936,7 @@ used
 "
 )
 ;
-gPropertyIndexedKeyframesTests
-.
-forEach
-(
-function
-(
-subtest
-)
-{
-test
-(
-function
-(
-t
-)
-{
-var
-effect
-=
-new
-KeyframeEffectReadOnly
-(
-target
-subtest
-.
-input
-)
-;
-assert_frame_lists_equal
-(
-effect
-.
-getKeyframes
-(
-)
-subtest
-.
-output
-)
-;
-}
-"
-a
-KeyframeEffectReadOnly
-can
-be
-constructed
-with
-"
-+
-subtest
-.
-desc
-)
-;
-test
-(
-function
-(
-t
-)
-{
-var
-effect
-=
-new
-KeyframeEffectReadOnly
-(
-target
-subtest
-.
-input
-)
-;
-var
-secondEffect
-=
-new
-KeyframeEffectReadOnly
-(
-target
-effect
-.
-getKeyframes
-(
-)
-)
-;
-assert_frame_lists_equal
-(
-secondEffect
-.
-getKeyframes
-(
-)
-effect
-.
-getKeyframes
-(
-)
-)
-;
-}
-"
-a
-KeyframeEffectReadOnly
-constructed
-with
-"
-+
-subtest
-.
-desc
-+
-"
-roundtrips
-"
-)
-;
-}
-)
-;
-gKeyframeSequenceTests
+gKeyframesTests
 .
 forEach
 (
