Bug 1398038 - Drop redundant exception data from gInvalidKeyframesTests and gInvalidKeyframeEffectOptionTests; r=hiro
The data is always the same so there's no need to repeat it here.

MozReview-Commit-ID: 35OmrbyGq24

UltraBlame original commit: 4aaee38ec23b5a65c0b51e9f2f7b7febfe8a1705

--- a/testing/web-platform/tests/web-animations/interfaces/KeyframeEffect/constructor.html
+++ b/testing/web-platform/tests/web-animations/interfaces/KeyframeEffect/constructor.html
@@ -1076,9 +1076,8 @@ t
 {
 assert_throws
 (
-subtest
-.
-expected
+new
+TypeError
 function
 (
 )
@@ -1520,9 +1519,8 @@ t
 {
 assert_throws
 (
-stest
-.
-expected
+new
+TypeError
 function
 (
 )
