Bug 1408330 - UI polish on DevTools onboarding page;r=nchevobbe
MozReview-Commit-ID: 5JE7ZErxCxG

UltraBlame original commit: 5d4bbcac2b7b5e1629b8bb805816e6a21b315077

--- a/devtools/shim/aboutdevtools/aboutdevtools.xhtml
+++ b/devtools/shim/aboutdevtools/aboutdevtools.xhtml
@@ -407,6 +407,13 @@ pane
 >
 <
 h1
+class
+=
+"
+installpage
+-
+title
+"
 id
 =
 "
@@ -433,6 +440,13 @@ h1
 >
 <
 h1
+class
+=
+"
+installpage
+-
+title
+"
 id
 =
 "
@@ -634,6 +648,13 @@ p
 >
 <
 a
+class
+=
+"
+installpage
+-
+link
+"
 href
 =
 "
