--- a/gfx/layers/apz/test/mochitest/helper_touch_action_regions.html
+++ b/gfx/layers/apz/test/mochitest/helper_touch_action_regions.html
@@ -169,16 +169,47 @@ type
 ;
 }
 function
-success
+listener
+(
+callback
+)
+{
+return
+function
 (
 e
 )
 {
-success
+ok
+(
+e
 .
-triggered
+type
 =
-true
+=
+'
+touchstart
+'
+"
+The
+touchstart
+event
+handler
+was
+triggered
+after
+snapshotting
+completed
+"
+)
+;
+setTimeout
+(
+callback
+0
+)
+;
+}
 ;
 }
 /
@@ -2162,10 +2193,12 @@ the
 touchend
 as
 well
-just
-for
-good
-form
+to
+clear
+all
+pending
+testDriver
+resumes
 yield
 ;
 ok
@@ -2258,6 +2291,14 @@ touchstart
 failure
 )
 ;
+var
+listenerFunc
+=
+listener
+(
+testDriver
+)
+;
 document
 .
 body
@@ -2267,7 +2308,7 @@ addEventListener
 '
 touchstart
 '
-success
+listenerFunc
 {
 passive
 :
@@ -2275,29 +2316,21 @@ true
 }
 )
 ;
-yield
-flushApzRepaints
+dump
 (
-testDriver
+'
+done
+registering
+listener
+going
+to
+yield
+\
+n
+'
 )
 ;
-ok
-(
-success
-.
-triggered
-"
-The
-touchstart
-event
-handler
-was
-triggered
-after
-snapshotting
-completed
-"
-)
+yield
 ;
 document
 .
@@ -2308,7 +2341,7 @@ removeEventListener
 '
 touchstart
 '
-success
+listenerFunc
 )
 ;
 }
