Backed out changeset 2dd370ac9599 (bug 1405696) for failing web-platform-test /workers/semantics/encodings/003.html. r=backout
UltraBlame original commit: 6f058c57e3d0a8d9474cda1b60a679f487c72ed1

--- a/testing/web-platform/tests/XMLHttpRequest/open-url-encoding.htm
+++ b/testing/web-platform/tests/XMLHttpRequest/open-url-encoding.htm
@@ -217,7 +217,9 @@ query
 )
 "
 %
-DF
+C3
+%
+9F
 "
 )
 }
@@ -280,16 +282,23 @@ query
 "
 )
 "
-&
 %
-2365533
-;
+EF
+%
+BF
+%
+BD
 "
 )
 }
 "
 lone
 surrogate
+should
+return
+U
++
+FFFD
 "
 )
 ;
