--- a/dom/performance/tests/test_worker_observer.html
+++ b/dom/performance/tests/test_worker_observer.html
@@ -65,6 +65,25 @@ js
 script
 >
 <
+script
+src
+=
+"
+/
+tests
+/
+SimpleTest
+/
+SimpleTest
+.
+js
+"
+>
+<
+/
+script
+>
+<
 /
 head
 >
@@ -86,6 +105,71 @@ div
 <
 script
 >
+SimpleTest
+.
+waitForExplicitFinish
+(
+)
+;
+let
+waitForConsole
+=
+new
+Promise
+(
+resolve
+=
+>
+{
+SimpleTest
+.
+monitorConsole
+(
+resolve
+[
+{
+message
+:
+/
+JavaScript
+Warning
+:
+"
+Ignoring
+unsupported
+entryTypes
+:
+invalid
+.
+"
+/
+}
+]
+)
+;
+}
+)
+;
+add_completion_callback
+(
+async
+(
+)
+=
+>
+{
+SimpleTest
+.
+endMonitorConsole
+(
+)
+;
+await
+waitForConsole
+;
+}
+)
+;
 fetch_tests_from_worker
 (
 new
