Bug 1354730.  Disable named property object (aka global scope polluter) behavior for all Xrays.  r=kmag
MozReview-Commit-ID: KmbXFfSzH0N

UltraBlame original commit: bd06b3b18448a804b81f40f48899626de04b3da8

--- a/dom/bindings/test/test_dom_xrays.html
+++ b/dom/bindings/test/test_dom_xrays.html
@@ -839,30 +839,23 @@ win
 shadowedIframe
 "
 undefined
-undefined
-doc
-.
-getElementById
-(
-"
-shadowedIframe
-"
-)
-.
-contentWindow
 )
 ;
 ok
+(
+!
 (
 "
 shadowedIframe
 "
 in
 win
+)
 "
 Named
 properties
 should
+not
 be
 exposed
 through
@@ -883,6 +876,14 @@ object
 for
 global
 objects
+/
+/
+but
+are
+not
+exposed
+via
+Xrays
 .
 checkWindowXrayProperty
 (
@@ -892,29 +893,25 @@ iframe
 "
 undefined
 undefined
-doc
-.
-getElementById
-(
-"
-iframe
-"
-)
-.
-contentWindow
+undefined
+undefined
 )
 ;
 ok
+(
+!
 (
 "
 iframe
 "
 in
 win
+)
 "
 Named
 properties
 should
+not
 be
 exposed
 through
@@ -947,16 +944,8 @@ document
 "
 doc
 undefined
-doc
-.
-getElementById
-(
-"
-document
-"
-)
-.
-contentWindow
+undefined
+undefined
 )
 ;
 ok
@@ -1002,16 +991,8 @@ self
 "
 win
 undefined
-doc
-.
-getElementById
-(
-"
-self
-"
-)
-.
-contentWindow
+undefined
+undefined
 )
 ;
 ok
