Bug 1183495 - part3: Remove mozSrcObject usage. r=jwwang
MozReview-Commit-ID: Gtpne3O0pBQ

UltraBlame original commit: 21c88386cd1ac50eb6c5a5f6d29195ef0b676a81

--- a/dom/media/tests/mochitest/test_peerConnection_callbacks.html
+++ b/dom/media/tests/mochitest/test_peerConnection_callbacks.html
@@ -389,7 +389,7 @@ e
 {
 v2
 .
-mozSrcObject
+srcObject
 =
 e
 .
@@ -504,7 +504,7 @@ addStream
 (
 v1
 .
-mozSrcObject
+srcObject
 =
 stream
 )
@@ -656,7 +656,7 @@ currentTime
 &
 v2
 .
-mozSrcObject
+srcObject
 .
 currentTime
 >
