--- a/mobile/android/tests/browser/robocop/robocop_getusermedia2.html
+++ b/mobile/android/tests/browser/robocop/robocop_getusermedia2.html
@@ -212,7 +212,7 @@ video_status
 {
 video
 .
-mozSrcObject
+srcObject
 .
 stop
 (
@@ -220,7 +220,7 @@ stop
 ;
 video
 .
-mozSrcObject
+srcObject
 =
 null
 ;
@@ -247,7 +247,7 @@ audio_status
 {
 audio
 .
-mozSrcObject
+srcObject
 .
 stop
 (
@@ -255,7 +255,7 @@ stop
 ;
 audio
 .
-mozSrcObject
+srcObject
 =
 null
 ;
@@ -306,7 +306,7 @@ video
 ;
 video
 .
-mozSrcObject
+srcObject
 =
 stream
 ;
@@ -331,7 +331,7 @@ audio
 ;
 audio
 .
-mozSrcObject
+srcObject
 =
 stream
 ;
@@ -416,7 +416,7 @@ gumtest
 ;
 audio
 .
-mozSrcObject
+srcObject
 .
 stop
 (
@@ -424,7 +424,7 @@ stop
 ;
 video
 .
-mozSrcObject
+srcObject
 .
 stop
 (
