--- a/testing/talos/talos/tests/devtools/addon/content/damp.html
+++ b/testing/talos/talos/tests/devtools/addon/content/damp.html
@@ -204,6 +204,13 @@ objectexpand
 "
 :
 true
+"
+inspector
+.
+mutations
+"
+:
+true
 }
 }
 ;
@@ -567,6 +574,25 @@ and
 close
 the
 console
+"
+"
+inspector
+.
+mutations
+"
+:
+"
+Measure
+the
+time
+to
+perform
+childList
+mutations
+when
+inspector
+is
+enabled
 "
 }
 ;
